<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_email">

    <ImageView
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/logo"
        android:foregroundGravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="45dp">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ibmplexsans"
            android:text="@string/Txt_registrarme"
            android:textColor="@color/morado_oscuro"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/Txt_crear_cuenta"
            android:textColor="@color/morado"
            android:fontFamily="@font/ibmplexsans"
            android:textSize="16dp"/>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">

            <EditText
                android:id="@+id/Et_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/ibmplexsans"
                android:hint="@string/Et_correo"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Txt_veri"
            android:textColor="@color/morado"
            android:fontFamily="@font/ibmplexsans"
            android:textSize="16dp"/>


        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/Et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/ibmplexsans"
                android:hint="@string/Et_contrasena"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="300dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/Et_confirmar_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:fontFamily="@font/ibmplexsans"
                android:hint="@string/Et_confirmar_contrasena"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Botón continuar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_registar_usuario"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ibmplexsans"
            android:text="@string/Btn_registar_usuario"
            android:textAllCaps="true" />

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/ibmplexsans"
                android:text="@string/Txt_tengo_una_cuenta"
                android:textColor="@color/gris" />

            <TextView
                android:id="@+id/Txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/ibmplexsans"
                android:gravity="center"
                android:text="@string/Txt_login"
                android:textColor="@color/morado"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>